fix: adjust mobile alignment

--- a/src/gatsby-theme-carbon/components/HeaderShadow.module.scss
+++ b/src/gatsby-theme-carbon/components/HeaderShadow.module.scss
@@ -5,9 +5,9 @@
   text-decoration: none;
   left: 3rem;
   white-space: nowrap;
-  height: 3rem;
+  height: 1.375rem;
   border-top: 1px solid transparent;
-  display: flex;
+  display: table-cell;
   align-items: center;
 
   &:focus {
